--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Портфолио</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+    rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+    integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -15,7 +22,7 @@
         <nav>
             <a href="./">WebStudio</a>
             <ul>
-                <li><a href="">Студия</a></li>
+                <li><a href="./index.html">Студия</a></li>
                 <li><a href="">Портфолио</a></li>
                 <li><a href="">Контакты</a></li>
             </ul>
@@ -30,7 +37,65 @@
 
     <!--Portfolio main content-->
     <main>
-        
+       
+        <section>
+            <h1>Портфолио</h1>
+            <ul>
+                <li><button type="button">Веб-сайты</button></li> 
+                <li><button type="button">Приложения</button></li>
+                <li><button type="button">Дизайн</button></li>
+                <li><button type="button">Маркетинг</button></li>
+                <li><button type="button">Все</button></li>
+            </ul>
+
+            <ul>
+                <li>
+                    <img src="./images/portfolio1.jpg" alt="Технокряк" width="402">
+                    <h2>Технокряк</h2>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio2.jpg" alt="Постер New Orlean vs Golden Star" width="402">
+                    <h2>Постер New Orlean vs Golden Star</h2>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio3.jpg" alt="Ресторан Seafood" width="402">
+                    <h2>Ресторан Seafood</h2>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio4.jpg" alt="Проект Prime" width="402">
+                    <h2>Проект Prime</h2>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio5.jpg" alt="Проект Boxes" width="402">
+                    <h2>Проект Boxes</h2>
+                    <p>Приложение</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio6.jpg" alt="Inspiration has no Borders" width="402">
+                    <h2>Inspiration has no Borders</h2>
+                    <p>Веб-сайт</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio7.jpg" alt="Издание Limited Edition" width="402">
+                    <h2>Издание Limited Edition</h2>
+                    <p>Дизайн</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio8.jpg" alt="Проект LAB" width="402">
+                    <h2>Проект LAB</h2>
+                    <p>Маркетинг</p>
+                </li>
+                <li>
+                    <img src="./images/portfolio9.jpg" alt="Growing Business" width="402">
+                    <h2>Growing Business</h2>
+                    <p>Приложение</p>
+                </li>
+            </ul>
+        </section>
     </main>
 
     <!--Address-->
