adding styles for buttons

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <!--Particular qualities-->
 
         <section class="section">
-            <h2 class="section-title">Характеристики ведения бизнеса</h2>
+            <h2 class="section-title title-hidden">Характеристики ведения бизнеса</h2>
             <ul class="section-qualities list">
                 <li><h3 class="particular-qualities">Внимание к деталям</h3><p class="qualities-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p></li>
                 <li><h3 class="particular-qualities">Пунктуальность</h3><p class="qualities-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p></li>
